<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:padding="2dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="10dp">


    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_width="290dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/TituloRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/AutoresRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/autores"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/ISBNRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/isbn"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/ImgRecycler"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical|right"
        tools:ignore="RtlHardcoded"
        android:contentDescription="@string/foto_de_la_portada" />


</androidx.cardview.widget.CardView>