<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="1dp"
    app:cardBackgroundColor="#D8C784"
    app:cardCornerRadius="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/TituloRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"
            android:textColor="#AA2944"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/DescripcionRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:hint="@string/descripcion"
            android:justificationMode="inter_word"
            android:textColor="@color/purple_700"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/FechaRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:hint="@string/fecha"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


</androidx.cardview.widget.CardView>