<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7E90DE"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="34dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/books" />


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/info"
            android:textColor="#001C1A"
            android:textSize="19sp" />

        <Button
            android:id="@+id/botonLlamar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:backgroundTint="#12151a"
            android:text="@string/llamar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="(+34) 000000000"
            android:textColor="#12151a" />


        <Button
            android:id="@+id/botonCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#12151a"
            android:textColor="@color/white"
            android:text="@string/mail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="biblioapp22@gmail.com"
            android:textColor="#12151a" />
    </LinearLayout>

</LinearLayout>