<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8C784"
    android:orientation="vertical"
    tools:context=".fragments.FragmentDetalleEvento">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TituloEvento"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/titulo"
                android:textColor="#260363"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_del_evento"
                    android:textColor="#CC1D10"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/FechaEvento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:textColor="#CC1D10"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/DescripcionEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ImagenEvento"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_publicacion"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/FechaPublicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="italic" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>