<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E5C9C"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/infoBoton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="#FF45559B"
                android:scaleType="fitXY"
                android:src="@drawable/info"
                tools:ignore="RtlHardcoded" />

            <ImageButton
                android:id="@+id/fotoBoton"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="#12151a"
                android:scaleType="fitXY"
                android:src="@drawable/perfil" />

            <Button
                android:visibility="gone"
                android:id="@+id/botonCambios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="#F44336"
                android:text="Guardar imagen" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/nombre"
                        android:textColor="#001C1A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/datoNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Irene"
                        android:textColor="#FF45559B" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/apellidos"
                        android:textColor="#001C1A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/datoApellidos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Sánchez Fernández"
                        android:textColor="#FF45559B" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Teléfono contacto: "
                        android:textColor="#001C1A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/datoTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="000"
                        android:textColor="#FF45559B" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Correo:"
                        android:textColor="#001C1A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/datoCorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:text="correo@gmail.com"
                        android:textColor="#FF45559B" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Libros en préstamo:"
                        android:textColor="#001C1A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/datoPrestamo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#FF45559B" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Libros reservados:"
                        android:textColor="#001C1A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/datoReserva"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#FF45559B" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearCategoriasInteres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Categorías favoritas:"
                        android:textColor="#001C1A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/datoCategorias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:textColor="#FF45559B" />
                </LinearLayout>

                <TextView
                    android:id="@+id/cambiarContrasenya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:text="Cambiar contraseña"
                    android:textColor="#112ECF"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contactar"
                    android:textColor="#BDBABA"
                    android:textSize="23sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/botonLlamar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="#FF7E90DE"
                        android:text="@string/llamar" />

                    <Button
                        android:id="@+id/botonCorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="#FF7E90DE"
                        android:text="@string/mail" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>